# emploSalary

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4866d5771ebb_seed_reference_data.py  e2aed9b7afdf_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/auth/: jwt.py  password.py
backend/app/core/: config.py  dependencies.py  exceptions.py  logging.py  redis.py
backend/app/database/: base.py  session.py
backend/app/integrations/: ml_service.py
backend/app/middleware/: rate_limit.py  request_logging.py
backend/app/models/: __init__.py  job_role.py  location.py  prediction.py  prediction_history.py  refresh_token.py  saved_report.py  skill.py  user.py
backend/app/repositories/: job_role_repository.py  location_repository.py  prediction_history_repository.py  prediction_repository.py  refresh_token_repository.py  saved_report_repository.py  skill_repository.py  user_repository.py
backend/app/routes/: analytics_routes.py  auth_routes.py  dashboard_routes.py  health_routes.py  prediction_routes.py  reference_routes.py  saved_report_routes.py  user_routes.py
backend/app/schemas/: analytics.py  auth.py  common.py  dashboard.py  health.py  job_role.py  location.py  prediction.py  saved_report.py  skill.py  user.py
backend/app/services/: analytics_service.py  auth_service.py  dashboard_service.py  (+5 more)
backend/tests/: conftest.py
(+62 files in other folders)
