[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "employee-salary-estimator-backend"
version = "1.0.0"
description = "Production FastAPI backend for the Employee Salary Estimator platform. Delegates all ML inference to an external ML service over HTTP."
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
